Major changes:
2011/03/11: Fix blocking management in socket and Tcp_Util.Abort_Send_And_Close
2011/03/10: Add operations to set/get TTL on socket
2011/03/09: Fix detection of '^' and '$' in search pattern when specific delimiter in asubst, V11.4
2011/03/08: Fix handling of specific Delim in asubst, V11.3
2011/03/01: Add different blocking modes for sending and receiving on sockets
2011/02/28: Add timeout in Tcp_Util.Send
2011/02/22: Add autobus package
2011/02/16: Add improve help of als, V6.2
2011/02/15: Add option --date_iso for strict ISO output of dates in als, V6.1
            Chg use ISO 8601 format for time input and output of als, V6.0
            Add a static agite executable
2011/02/14: Fix dispatching of X Refresh event to multiple windows
            Add Get_Clock in Chronos, and remove Detach cause same as Attach (null)
2011/02/13: Add use anonymous access type in Limited_List
2011/02/12: Add make Timer_Id a smart reference
2011/02/11: Add new operations on Timers and add New_Id parameter to expiration callback
2011/02/10: Add improve error reported when parsing encoding map in Xml_Parser V26.1
2011/02/08: Add operation Set_Pi to Xml_Parser.Generator V9.0
2011/02/07: Add make Timer_Id tagged
            Chg remove Text_Handler
2011/02/06: Add fix size of X window in window manager
2011/02/04: Add make State_Machine OO
2011/02/02: Add support for http://<ip_address>
2011/02/01: Fix in http the decoding when server replies an error (no header)
2011/01/31: Add make Ada_Parser and Computer re-entrant
2011/01/28: Add Hosting in github
2011/01/21: Add Set_Null in As.U and Unbounded_Arrays and use them
2011/01/20: Fix many small fixes in select_file and initializations of chess, approx and day_of_week
2011/01/07: Fix remove "use" of As.U and As.B
            Fix use As.B instead of Text_Handler and restore original Text_Handler
2010/12/28: Fix unbounded Tail when no pad needed
2010/12/22: Add our own (tagged) version of unbounded and bounded strings